--- a/user.html
+++ b/user.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>User Dashboard</h1>
     <p>Hello! Book and manage your doctor appointments here.</p>
-    <img src="user_cartoon.png" alt="User Cartoon" class="banner">
+    <img src="user_cartoon.jpg" alt="User Cartoon" class="banner">
     <ul>
       <li>➕ Book a new appointment</li>
       <li>📂 View booking history</li>
