--- a/doctor.html
+++ b/doctor.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Doctor Dashboard</h1>
     <p>Welcome, Doctor! You can manage your schedule and appointments here.</p>
-    <img src="d_cartoon.jpg.jpg" alt="Doctor Cartoon" class="banner">
+    <img src="d_cartoon.jpg" alt="Doctor Cartoon" class="banner">
     <ul>
       <li>📅 View appointments</li>
       <li>✍ Confirm or reschedule visits</li>
