--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <h2>Or Visit a Dashboard Directly</h2>
     <div class="nav-links">
-      <a href="user.html" class="btn">User Dashboard</a>
-      <a href="doctor.html" class="btn">Doctor Dashboard</a>
+      <a href="user.html" class="btn">User Dashboard</a><break>
+      <a href="doctor.html" class="btn">Doctor Dashboard</a><break>
       <a href="admin.html" class="btn">Admin Dashboard</a>
     </div>
   </div>
